# levelx

./: CMakeLists.txt  README.md  SECURITY.md  TODO
.github/workflows/: regression_test.yml
common/inc/: lx_api.h  lx_user_sample.h
common/src/: fx_nand_flash_simulated_driver.c  fx_nor_flash_simulator_driver.c  lx_nand_flash_256byte_ecc_check.c  lx_nand_flash_256byte_ecc_compute.c  lx_nand_flash_block_allocate.c  lx_nand_flash_block_data_move.c  lx_nand_flash_block_find.c  lx_nand_flash_block_full_update.c  lx_nand_flash_block_mapping_set.c  lx_nand_flash_block_obsoleted_check.c  lx_nand_flash_block_reclaim.c  lx_nand_flash_block_status_set.c  lx_nand_flash_close.c  lx_nand_flash_data_page_copy.c  lx_nand_flash_defragment.c  lx_nand_flash_driver_block_erase.c  lx_nand_flash_driver_block_erased_verify.c  lx_nand_flash_driver_block_status_get.c  lx_nand_flash_driver_block_status_set.c  lx_nand_flash_driver_extra_bytes_get.c  lx_nand_flash_driver_extra_bytes_set.c  lx_nand_flash_driver_page_erased_verify.c  lx_nand_flash_driver_read.c  lx_nand_flash_driver_write.c  lx_nand_flash_erase_count_set.c  lx_nand_flash_extended_cache_enable.c  lx_nand_flash_format.c  lx_nand_flash_free_block_list_add.c  lx_nand_flash_initialize.c  lx_nand_flash_logical_sector_find.c  lx_nand_flash_mapped_block_list_add.c  lx_nand_flash_mapped_block_list_get.c  lx_nand_flash_mapped_block_list_remove.c  lx_nand_flash_memory_initialize.c  lx_nand_flash_metadata_allocate.c  lx_nand_flash_metadata_build.c  lx_nand_flash_metadata_write.c  (+34 more)
docs/: LevelX_User_Guide.docx  revision_history.txt
(+17 files in other folders)
